#162 Fix `pitest` error caused by `excludedGroups`.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>