@@ -294,10 +294,14 @@
         </profile>
         <profile>
             <!-- Execute mutation testing via "mvn -P test-via-mutations-via-pitest clean verify".
-            The results are located at "target/pit-reports". -->
+            The results are located at "target/pit-reports".
+            Disable profile JUnit profile via setting test_via_junit_disabled=1, if this is enabled.
+            -->
             <id>test-via-mutations-via-pitest</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>test_via_pitest_enabled</name>
+                </property>
             </activation>
             <!-- Error: "Minion exited abnormally due to TIMED_OUT"
             Classification: The error is harmless as it is probably cause by the fact, that a mutation caused an endless loop.
@@ -324,19 +328,45 @@
                             </dependency>
                         </dependencies>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>2.22.2</version>
+                        <configuration>
+                            <argLine>
+                                --illegal-access=permit
+                            </argLine>
+                            <!--trimStackTrace: show full stack trace in console: source: https://stackoverflow.com/questions/2928548/make-mavens-surefire-show-stacktrace-in-console/16941432#16941432-->
+                            <trimStackTrace>false</trimStackTrace>
+                            <systemPropertyVariables>
+                                <!-- TOFIX Does not work. Currently the property is set in TestSuiteI manually. -->
+                                <net.splitcells.mode.build>true</net.splitcells.mode.build>
+                            </systemPropertyVariables>
+                            <parallel>all</parallel>
+                            <useUnlimitedThreads>true</useUnlimitedThreads>
+                            <!-- TODO Execute tests in parallel. parallel>all</parallel>
+                            <useUnlimitedThreads>true</useUnlimitedThreads-->
+                            <excludedGroups>testing_capabilities</excludedGroups>
+                            <argLine>${surefireArgLine}</argLine>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
-        </profile>
-        <profile>
-            <id>profile-performance-of-maven</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
             <dependencies>
                 <dependency>
-                    <groupId>io.tesla.profile</groupId>
-                    <artifactId>tesla-profiler</artifactId>
-                    <version>0.0.3</version>
+                    <groupId>org.junit.platform</groupId>
+                    <artifactId>junit-platform-launcher</artifactId>
+                    <version>1.6.0</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-engine</artifactId>
+                    <version>5.5.2</version>
+                </dependency>
+                <dependency>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter-api</artifactId>
+                    <version>5.5.2</version>
                 </dependency>
             </dependencies>
         </profile>
